--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,11 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
+Html,
+body
+:root{
+  height:100%
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
